further app materialization, minor ui/ux improvments

--- a/app/src/main/res/layout/activity_edit_user_details.xml
+++ b/app/src/main/res/layout/activity_edit_user_details.xml
@@ -15,121 +15,118 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.joaquimley.byinvitationonly.activities.EditUserDetailsActivity">
 
-    <android.support.v7.internal.widget.CompatTextView
-        android:id="@+id/tv_edit_details"
+    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/text_edit_details"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentStart="false" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/toolbar">
 
-    <ImageView
-        android:id="@+id/iv_profile_picture"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_below="@+id/tv_edit_details"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentStart="false"
-        android:contentDescription="@string/text_user_profile_picture"
-        android:layout_alignParentEnd="false"
-        android:layout_centerHorizontal="true" />
+        <android.support.v7.internal.widget.TintImageView
+            android:id="@+id/iv_profile_picture"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:contentDescription="@string/text_user_profile_picture"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentEnd="false"
+            android:layout_centerHorizontal="true" />
 
-    <android.support.v7.internal.widget.CompatTextView
-        android:id="@+id/tv_details_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/iv_profile_picture"
-        android:layout_marginTop="5dp"
-        android:text="@string/text_name" />
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_details_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/iv_profile_picture"
+            android:layout_marginTop="5dp"
+            android:text="@string/text_name" />
 
-    <android.support.v7.internal.widget.TintEditText
-        android:id="@+id/et_edit_user_details_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_details_name"
-        android:ems="10"
-        android:inputType="textPersonName|textCapWords" />
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/et_edit_user_details_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tv_details_name"
+            android:ems="10"
+            android:inputType="textPersonName|textCapWords" />
 
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_details_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/et_edit_user_details_name"
+            android:text="@string/email" />
 
-    <android.support.v7.internal.widget.CompatTextView
-        android:id="@+id/tv_details_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/et_edit_user_details_name"
-        android:text="@string/email" />
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/et_edit_user_details_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tv_details_email"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
 
-    <android.support.v7.internal.widget.TintEditText
-        android:id="@+id/et_edit_user_details_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_details_email"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_details_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/et_edit_user_details_email"
+            android:text="@string/description" />
 
-    <android.support.v7.internal.widget.CompatTextView
-        android:id="@+id/tv_details_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/et_edit_user_details_email"
-        android:text="@string/description" />
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/et_edit_user_details_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/btn_cancel"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tv_details_description"
+            android:ems="10"
+            android:inputType="textCapWords|textMultiLine" />
 
-    <android.support.v7.internal.widget.TintEditText
-        android:id="@+id/et_edit_user_details_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/btn_cancel"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_details_description"
-        android:ems="10"
-        android:inputType="textCapWords|textMultiLine" />
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/btn_save"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="10dp"
+            fancy:defaultColor="@color/primary_app_color"
+            fancy:focusColor="@color/accent_material_light"
+            fancy:radius="30dp"
+            fancy:text="@string/text_save"
+            fancy:textColor="#FFFFFF"
+            android:layout_below="@+id/et_edit_user_details_description" />
 
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/btn_save"
+            android:layout_gravity="center_horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="10dp"
+            fancy:defaultColor="@color/primary_app_color"
+            fancy:focusColor="@color/accent_material_light"
+            fancy:radius="30dp"
+            fancy:text="@string/text_cancel"
+            fancy:textColor="#FFFFFF" />
+    </RelativeLayout>
 
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/btn_save"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="10dp"
-        fancy:defaultColor="@color/primary_app_color"
-        fancy:focusColor="@color/accent_material_light"
-        fancy:radius="30dp"
-        fancy:text="@string/text_save"
-        fancy:textColor="#FFFFFF"
-        android:layout_below="@+id/et_edit_user_details_description" />
-
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/btn_cancel"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/btn_save"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="10dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="10dp"
-        fancy:defaultColor="@color/primary_app_color"
-        fancy:focusColor="@color/accent_material_light"
-        fancy:radius="30dp"
-        fancy:text="@string/text_cancel"
-        fancy:textColor="#FFFFFF" />
 
 </RelativeLayout>
