--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015 Joaquim Ley - www.joaquimley.com
   ~ All rights reserved.
   ~
@@ -11,47 +10,58 @@
   ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
   -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_smaller_horizontal_margin"
-    android:paddingBottom="@dimen/activity_smaller_vertical_margin"
-    android:paddingLeft="@dimen/activity_smaller_horizontal_margin"
-    android:paddingRight="@dimen/activity_smaller_horizontal_margin"
-    tools:context=".MainActivity"
-    android:id="@+id/main_activity"
-    android:weightSum="1">
+    tools:context="com.joaquimley.byinvitationonly.activities.MainActivity">
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar" />
 
-    <include layout="@layout/custom_user_row"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#0D47A1"
-        android:text="@string/text_up_coming_sessions"
-        android:id="@+id/tv_up_coming_sessions" />
-
-    <com.baoyz.widget.PullRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
+    <include
+        android:id="@+id/user_profile"
+        layout="@layout/custom_user_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="0dp">
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="2dp" />
 
-        <ListView
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/tv_up_coming_sessions"
+        android:layout_below="@id/user_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="13dp"
+        android:paddingBottom="13dp"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:background="@color/subtitle_app_color"
+        android:text="@string/text_up_coming_sessions"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_up_coming_sessions"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin" >
+
+        <com.baoyz.widget.PullRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_marginTop="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ListView
                 android:id="@+id/list"
                 android:layout_width="wrap_content"
                 android:layout_height="260dp"
-                android:drawSelectorOnTop="false"/>
+                android:drawSelectorOnTop="false" />
 
-    </com.baoyz.widget.PullRefreshLayout>
+        </com.baoyz.widget.PullRefreshLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
