--- a/app/src/main/res/layout/custom_session_list.xml
+++ b/app/src/main/res/layout/custom_session_list.xml
@@ -30,10 +30,9 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/image"
+        android:layout_alignEnd="@+id/image"
         android:layout_alignTop="@+id/image"
         android:textSize="@dimen/title"
-        android:text="Title example"
         android:textStyle="bold"
         android:paddingBottom="7dp" />
 
@@ -43,13 +42,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/speaker"
-        android:text="Speaker Example"
         android:textStyle="bold"
         android:paddingTop="1dp"
         android:paddingBottom="1dp"
         android:layout_below="@+id/favorite"
         android:layout_toEndOf="@+id/image" />
-
 
     <!-- Favorite -->
     <CheckBox
@@ -66,7 +63,6 @@
     <!-- Description -->
     <TextView
         android:id="@+id/description"
-        android:text="Description example Lorem ipsodiumLorem ipsodium Lorem ipsodium Lorem ipsodium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/description"
@@ -84,14 +80,12 @@
         android:layout_below="@+id/image"
         android:layout_alignParentStart="true"
         android:gravity="end">
-        <!--android:background="@color/list_row_date_color"-->
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/date"
-            android:text="28/05/2015 | 19:00 - 21:00" />
+            android:textSize="@dimen/date" />
 
     </LinearLayout>
 
