--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,28 +11,30 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity">
 
-    <item android:id="@+id/ic_menu_group"
-        android:title="@string/title_activity_participants_list"
-        android:orderInCategory="98"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_action_group"/>
+    <!--<item android:id="@+id/ic_menu_group"-->
+        <!--android:title="@string/title_activity_participants_list"-->
+        <!--android:orderInCategory="98"-->
+        <!--app:showAsAction="ifRoom"-->
+        <!--android:icon="@drawable/ic_action_group"/>-->
 
-    <item android:id="@+id/ic_menu_favorite"
-        android:title="@string/title_favorite"
-        android:orderInCategory="99"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_favorite_checkbox_selected"/>
+    <!--<item android:id="@+id/ic_menu_favorite"-->
+        <!--android:title="@string/title_bookmark"-->
+        <!--android:orderInCategory="99"-->
+        <!--app:showAsAction="ifRoom"-->
+        <!--android:icon="@drawable/ic_favorite_checkbox_selected"/>-->
 
-    <item android:id="@+id/ic_menu_session"
-        android:title="@string/title_keynote"
-        android:orderInCategory="99"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_keynote"/>
+    <!--<item android:id="@+id/ic_menu_session"-->
+        <!--android:title="@string/title_sessions"-->
+        <!--android:orderInCategory="99"-->
+        <!--app:showAsAction="ifRoom"-->
+        <!--android:icon="@drawable/ic_keynote"/>-->
 
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <!--<item android:id="@+id/action_settings"-->
+        <!--android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100"-->
+        <!--app:showAsAction="ifRoom" />-->
 </menu>
