--- a/app/src/main/res/layout/activity_participants_list.xml
+++ b/app/src/main/res/layout/activity_participants_list.xml
@@ -36,6 +36,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <include
+            android:id="@+id/user_profile"
+            layout="@layout/custom_user_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
