--- a/app/src/main/res/drawable/checkbox_selector.xml
+++ b/app/src/main/res/drawable/checkbox_selector.xml
@@ -21,9 +21,9 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:drawable="@drawable/ic_favorite_checkbox_default"
+    <item android:drawable="@drawable/ic_star"
         android:state_checked="false"/>
-    <item android:drawable="@drawable/ic_favorite_checkbox_selected"
+    <item android:drawable="@drawable/ic_star_selected"
         android:state_checked="true"/>
-    <item android:drawable="@drawable/ic_favorite_checkbox_default"/>
+    <item android:drawable="@drawable/ic_star"/>
 </selector>
