--- a/app/src/main/res/menu/main_activity_actions.xml
+++ b/app/src/main/res/menu/main_activity_actions.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ GNU GENERAL PUBLIC LICENSE
   ~                        Version 3, 29 June 2007
@@ -21,13 +20,20 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.joaquimley..activities.SettingsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings" />
+        android:id="@+id/edit_user_details"
+        android:icon="@drawable/ic_pencil"
+        android:orderInCategory="98"
+        android:title="@string/title_activity_edit_user_details"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_refresh_interval"
+        android:orderInCategory="99"
+        android:title="@string/text_refresh_interval"
+        app:showAsAction="ifRoom" />
+    <!--android:icon="@drawable/ic_pencil"-->
 
 </menu>
