--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
     <color name="myNavigationColor">#000000</color>
     <color name="selected_gray">#ffdbdbdb</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
     <!-- List -->
     <color name="list_divider">@color/material_blue_grey_800</color>
     <color name="list_row_start_color">@color/ripple_material_dark</color>
