--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ GNU GENERAL PUBLIC LICENSE
   ~                        Version 3, 29 June 2007
   ~
@@ -21,35 +20,36 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <item android:id="@+id/ib_user_status"
-        android:title="@string/action_check_in"
+    <item
+        android:id="@+id/ib_user_status"
         android:icon="@drawable/status_selector"
         android:orderInCategory="99"
+        android:title="@string/action_check_in"
         app:showAsAction="ifRoom" />
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never">
+    <!--<item-->
+    <!--android:id="@+id/action_settings"-->
+    <!--android:orderInCategory="100"-->
+    <!--android:title="@string/action_settings"-->
+    <!--app:showAsAction="never">-->
 
-    <menu>
+    <!--<menu>-->
         <item
             android:id="@+id/edit_user_details"
             android:orderInCategory="98"
             android:title="@string/title_activity_edit_user_details"
-            app:showAsAction="ifRoom" />
+            app:showAsAction="never" />
 
         <item
             android:id="@+id/action_refresh_interval"
             android:orderInCategory="99"
             android:title="@string/text_refresh_interval"
-            app:showAsAction="ifRoom" />
-        </menu>
-    </item>
+            app:showAsAction="never" />
+    <!--</menu>-->
+    <!--</item>-->
 
 </menu>
