--- a/app/src/main/res/layout/custom_session_list.xml
+++ b/app/src/main/res/layout/custom_session_list.xml
@@ -37,6 +37,7 @@
     <!-- Title -->
     <TextView
         android:id="@+id/title"
+        android:text="Self-paced Code Labs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/image"
@@ -48,6 +49,7 @@
     <!-- Speaker -->
     <TextView
         android:id="@+id/speaker"
+        android:text="Larry Fucking Page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/speaker"
@@ -60,6 +62,7 @@
     <!-- Favorite -->
     <CheckBox
         android:button="@drawable/checkbox_selector"
+        android:background="@drawable/ic_star_selected"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_width="wrap_content"
@@ -72,6 +75,7 @@
     <!-- Description -->
     <TextView
         android:id="@+id/description"
+        android:text="Get hands on with self-paced workshops showcasing Google mobile, wearable, and Cloud technologies. We provide the workstations and tablets - just bring yourself any time during the day! We can also help you set up your own machine and device."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/description"
