--- a/app/src/main/res/layout/custom_session_list.xml
+++ b/app/src/main/res/layout/custom_session_list.xml
@@ -32,75 +32,61 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:paddingRight="10dp"
+        android:layout_marginTop="5dp" />
 
     <!-- Title -->
     <TextView
         android:id="@+id/title"
-        android:text="Self-paced Code Labs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/image"
-        android:layout_alignTop="@+id/image"
         android:textSize="@dimen/title"
         android:textStyle="bold"
-        android:paddingBottom="7dp" />
+        android:paddingBottom="7dp"
+        android:layout_alignTop="@+id/image"
+        android:layout_toEndOf="@+id/image" />
 
     <!-- Speaker -->
     <TextView
         android:id="@+id/speaker"
-        android:text="Larry Fucking Page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/speaker"
         android:textStyle="bold"
         android:paddingTop="1dp"
         android:paddingBottom="1dp"
-        android:layout_below="@+id/favorite"
+        android:layout_below="@+id/title"
         android:layout_toEndOf="@+id/image" />
 
     <!-- Favorite -->
     <CheckBox
         android:button="@drawable/checkbox_selector"
-        android:background="@drawable/ic_star_selected"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/favorite"
-        android:layout_marginEnd="5dp"
-        android:layout_alignBottom="@+id/title"
-        android:layout_alignEnd="@+id/description" />
+        android:layout_above="@+id/description"
+        android:layout_alignEnd="@+id/description"
+        android:layout_below="@+id/title" />
 
     <!-- Description -->
     <TextView
         android:id="@+id/description"
-        android:text="Get hands on with self-paced workshops showcasing Google mobile, wearable, and Cloud technologies. We provide the workstations and tablets - just bring yourself any time during the day! We can also help you set up your own machine and device."
+        android:layout_marginTop="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/description"
-        android:layout_below="@+id/speaker"
+        android:layout_below="@+id/date"
+        android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/image" />
-
-    <!-- Date -->
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="1dp"
-        android:paddingEnd="1dp"
-        android:weightSum="1"
-        android:layout_below="@+id/image"
-        android:layout_alignParentStart="true"
-        android:gravity="end">
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/date" />
-
-    </LinearLayout>
-
+            android:textSize="@dimen/date"
+            android:layout_below="@+id/speaker"
+            android:layout_toEndOf="@+id/image" />
 
 </RelativeLayout>
